fix database after login API tests and add API documentation (not full)
