# backend/app/api/Login.py
@@ -12,15 +12,15 @@ class Login(Resource):
         login = request.json.get('login')
         password = request.json.get('password')
         if not login or not password:
-            return jsonify(message='Wrong login or password')
+            return jsonify(message='You should provide login and password'), 400
 
         user = User.get_by_login(login)
         if not user:
-            return jsonify(message='Wrong login or password')
+            return jsonify(message='No such user'), 404
 
         user = user.auth(login, password)
         if not user:
-            return jsonify(message='Wrong login or password')
+            return jsonify(message='Wrong password'), 401
 
         user.current_ip = request.remote_addr
         response = jsonify(role=user.role.name)
